code cleanup after FindBugs check
git-svn-id: https://svn.apache.org/repos/asf/incubator/chemistry/opencmis/trunk@1040262 13f79535-47bb-0310-9956-ffa450edef68